--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1404,6 +1404,12 @@
         <version>1.1.4</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>7.0.91</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
