--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -49,7 +49,6 @@ dhis-web-data-quality=Data Quality
 dhis-web-maps=Maps
 dhis-web-mapping=GIS
 dhis-web-event-capture=Event Capture
-dhis-web-capture=Capture
 dhis-web-event-reports=Event Reports
 dhis-web-event-visualizer=Event Visualizer
 dhis-web-tracker-capture=Tracker Capture
@@ -59,7 +58,7 @@ dhis-web-light=Mobile (Light)
 dhis-web-mobile=Mobile (Smartphone)
 dhis-web-dashboard-integration=Dashboard
 dhis-web-messaging=Messaging
-dhis-web-visualizer=Classic Data Visualizer
+dhis-web-visualizer=Data Visualizer
 dhis-web-pivot=Pivot Table
 dhis-web-app-management=App Management
 dhis-web-usage-analytics=Usage Analytics
@@ -70,7 +69,6 @@ dhis-web-user=Users
 dhis-web-scheduler=Scheduler
 dhis-web-dashboard=Dashboard
 dhis-web-menu-management=Menu Management
-dhis-web-data-visualizer=Data Visualizer
 
 #-- Intro modules -------------------------------------------------------------#
 
@@ -126,7 +124,7 @@ M_dhis-web-app-management=App Management app
 M_dhis-web-usage-analytics=Usage Analytics app
 M_dhis-web-light=Light app
 M_dhis-web-mobile=Smartphone app
-M_dhis-web-visualizer=Classic Data Visualizer app
+M_dhis-web-visualizer=Data Visualizer app
 M_dhis-web-maintenance-mobile=Mobile Maintenance app
 M_dhis-web-pivot=Pivot Table app
 M_dhis-web-sms=SMS app
@@ -139,7 +137,6 @@ M_dhis-web-menu-management=Menu Management app
 M_dhis-web-user=Users app
 M_dhis-web-scheduler=Scheduler app
 M_dhis-web-capture=Capture app
-M_dhis-web-data-visualizer=Data Visualizer app
 
 #-- User action privilegies ---------------------------------------------------#
 
@@ -1433,13 +1430,13 @@ app_could_not_be_installed_on_file_system=App could not be installed on file sys
 app_could_not_be_found=App could not be found
 system_base_url_is_not_defined=System base URL is not defined
 missing_manifest=Manifest file missing from zip file
+deletion_in_progress=App is currently being deleted. Please try again after few minutes.
 
 #-- Data value error codes ----------------------------------------------------#
 
 data_element_or_type_null_or_empty=Data element or type is null or empty
 value_length_greater_than_max_length=Data value is greater than max length
 value_not_numeric=Data value is not numeric
-value_required_but_not_provided=Data value is required but it was not provided
 value_not_unit_interval=Data value is not a unit interval
 value_not_percentage=Data value is not a percentage
 value_not_integer=Data value is not an integer
@@ -1473,16 +1470,24 @@ respond_to_this_message=Respond to this message
 email_restore_subject=User account restore confirmation at
 email_restore_1_1st_paragraph_before_application_title=Someone, probably you, has asked us to restore your
 email_restore_1_1st_paragraph_after_application_title=user account.
-email_restore_1_2nd_paragraph=Please follow the link below to restore your account.
+email_restore_1_2nd_paragraph=You have been sent two emails, where this is the first one. Please follow the link below. In the next step you will be asked to enter a code which has been sent to you in the other email.
 email_restore_1_3rd_paragraph=You must complete the restore process within 1 hour. If you take no action, your account will not be restored. If you did not request this restore, please disregard this message.
+email_restore_2_1st_paragraph_before_application_title=Someone, probably you, has asked us to restore your
+email_restore_2_1st_paragraph_after_application_title=user account.
+email_restore_2_2nd_paragraph=You have been sent two emails, where this is the second one. Please read the first email and follow the instructions. Please use the code below to complete the new account form.
+email_restore_2_3rd_paragraph=You must complete the restore process within 1 hour. If you take no action, your account will not be restored. If you did not request this restore, please disregard this message.
 
 #-- Invite emails -------------------------------------------------------------#
 
 email_invite_subject=Invitation to create user account at
 email_invite_1_1st_paragraph_before_application_title=This is an invitation to create a
 email_invite_1_1st_paragraph_after_application_title=user account.
-email_invite_1_2nd_paragraph=Please follow the link below to accept the invitation and create your account.
-email_invite_1_3rd_paragraph=You must respond to this invitation within 4 days. If you take no action, the invitation will expire at that time.
+email_invite_1_2nd_paragraph=You have been sent two emails, where this is the first one. Please follow the link below. In the next step you will be asked to enter a code which has been sent to you in the other email.
+email_invite_1_3rd_paragraph=You must respond to this invitation within one week. If you take no action, the invitation will expire at that time.
+email_invite_2_1st_paragraph_before_application_title=This is an invitation to create a
+email_invite_2_1st_paragraph_after_application_title=user account.
+email_invite_2_2nd_paragraph=You have been sent two emails, where this is the second one. Please read the first email and follow the instructions. Please use the code below to complete the new account form.
+email_invite_2_3rd_paragraph=You must respond to this invitation within one week. If you take no action, the invitation will expire at that time.
 
 #-- Cache strategy display strings --------------------------------------------#
 
