--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -22,6 +22,13 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <!-- DHIS -->
@@ -171,6 +178,11 @@
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
+    </dependency>
+    <dependency>
+   	  <groupId>com.github.eHealthAfrica</groupId>
+   	  <artifactId>dhis2-sms-compression</artifactId>
+   	  <version>0.1.7</version>
     </dependency>
 
     <!-- Security -->
