--- a/dhis-2/dhis-web/dhis-web-commons-resources/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web</artifactId>
-    <version>2.31.5</version>
+    <version>2.31.6-SNAPSHOT</version>
   </parent>
   
   <artifactId>dhis-web-commons-resources</artifactId>
