--- a/dhis-2/dhis-web/dhis-web-portal/src/main/webapp/WEB-INF/web.xml
+++ b/dhis-2/dhis-web/dhis-web-portal/src/main/webapp/WEB-INF/web.xml
@@ -58,13 +58,13 @@
     <async-supported>true</async-supported>
   </filter>
   <filter>
+    <filter-name>secureSessionCookieFilter</filter-name>
+    <filter-class>org.hisp.dhis.servlet.filter.SecureSessionCookieFilter</filter-class>
+  </filter>
+  <filter>
     <filter-name>Struts</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
     <async-supported>true</async-supported>
-  </filter>
-  <filter>
-    <filter-name>secureSessionCookieFilter</filter-name>
-    <filter-class>org.hisp.dhis.servlet.filter.SecureSessionCookieFilter</filter-class>
   </filter>
   <filter>
     <filter-name>encoding-filter</filter-name>
@@ -147,11 +147,11 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>Struts</filter-name>
-    <url-pattern>*.action</url-pattern>
+    <filter-name>secureSessionCookieFilter</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>secureSessionCookieFilter</filter-name>
+    <filter-name>Struts</filter-name>
     <url-pattern>*.action</url-pattern>
   </filter-mapping>
   <filter-mapping>
