--- a/dhis-2/dhis-services/pom.xml
+++ b/dhis-2/dhis-services/pom.xml
@@ -40,6 +40,7 @@
     <module>dhis-service-analytics</module>
     <!-- Level 9 -->
     <module>dhis-service-reporting</module>
+    <module>dhis-service-tracker</module>
   </modules>
 
   <dependencies>
