--- a/dhis-2/dhis-services/dhis-service-acl/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-acl/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-services</artifactId>
-    <version>2.33.0-FF</version>
+    <version>2.33.0-SNAPSHOT</version>
   </parent>
   
   <artifactId>dhis-service-acl</artifactId>
