--- a/dhis-2/dhis-web/dhis-web-maintenance/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-maintenance/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web</artifactId>
-    <version>2.33.0-FF</version>
+    <version>2.33.0-SNAPSHOT</version>
   </parent>
   
   <artifactId>dhis-web-maintenance</artifactId>
