--- a/dhis-2/dhis-web/dhis-web-commons/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-commons/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web</artifactId>
-    <version>2.33-SNAPSHOT</version>
+    <version>2.33.0-FF</version>
   </parent>
 
   <artifactId>dhis-web-commons</artifactId>
