--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1293,9 +1293,14 @@
         <version>19.0</version>
       </dependency>
       <dependency>
-        <groupId>com.github.ben-manes.caffeine</groupId>
-        <artifactId>caffeine</artifactId>
-        <version>2.7.0</version>
+        <groupId>org.cache2k</groupId>
+        <artifactId>cache2k-api</artifactId>
+        <version>1.2.3.Final</version>
+      </dependency>
+      <dependency>
+       <groupId>org.cache2k</groupId>
+       <artifactId>cache2k-core</artifactId>
+       <version>1.2.3.Final</version>
       </dependency>
       <dependency>
         <groupId>com.googlecode.jsmpp</groupId>
