--- a/dhis-2/dhis-services/dhis-service-schema/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-schema/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-services</artifactId>
-    <version>2.33.0-rc1</version>
+    <version>2.33.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dhis-service-schema</artifactId>
