--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-mobile/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-mobile/pom.xml
@@ -5,7 +5,7 @@
    <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web-maintenance</artifactId>
-    <version>2.33.0-rc1</version>
+    <version>2.33.0-SNAPSHOT</version>
   </parent>  
 
   <artifactId>dhis-web-maintenance-mobile</artifactId>
