--- a/dhis-2/dhis-web/dhis-web-portal/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-portal/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web</artifactId>
-    <version>2.33.0-rc1</version>
+    <version>2.33.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dhis-web-portal</artifactId>
