--- a/dhis-2/dhis-services/dhis-service-audit-consumer/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-audit-consumer/pom.xml
@@ -31,7 +31,7 @@
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
-      <artifactId>dhis-support-hibernate</artifactId>
+      <artifactId>dhis-support-artemis</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
