--- a/docker/tomcat-debian/Dockerfile
+++ b/docker/tomcat-debian/Dockerfile
@@ -11,7 +11,9 @@ RUN rm -rf /usr/local/tomcat/webapps/* && \
     mkdir /usr/local/tomcat/webapps/ROOT && \
     chmod +rx /usr/local/bin/docker-entrypoint.sh && \
     mkdir $DHIS2_HOME && \
-    adduser --system --disabled-password --group tomcat
+    adduser --system --disabled-password --group tomcat \
+    echo 'tomcat' >> /etc/cron.deny \
+    echo 'tomcat' >> /etc/at.deny
 
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
