--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,9 +12,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Test core
-      run: mvn clean test -DskipTests=false -q -f ./dhis-2/pom.xml
+      run: mvn clean test -DskipTests=false --update-snapshots -q -f ./dhis-2/pom.xml
     - name: Test dhis-web
-      run: mvn clean test -DskipTests=false -q -f ./dhis-2/dhis-web/pom.xml
+      run: mvn clean test -DskipTests=false --update-snapshots -q -f ./dhis-2/dhis-web/pom.xml
   
   integration-test:
     runs-on: ubuntu-latest
