--- a/dhis-2/dhis-e2e-test/pom.xml
+++ b/dhis-2/dhis-e2e-test/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>opencsv</artifactId>
       <version>4.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.aeonbits.owner</groupId>
+      <artifactId>owner</artifactId>
+      <version>1.0.10</version>
+    </dependency>
   </dependencies>
 
   <build>
