--- a/dhis-2/dhis-services/pom.xml
+++ b/dhis-2/dhis-services/pom.xml
@@ -41,6 +41,7 @@
     <!-- Level 9 -->
     <module>dhis-service-reporting</module>
     <module>dhis-service-tracker</module>
+    <module>dhis-service-audit-consumer</module>
   </modules>
 
   <dependencies>
