--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -437,6 +437,12 @@
       </dependency>
       <dependency>
         <groupId>org.hisp.dhis</groupId>
+        <artifactId>dhis-service-audit-consumer</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hisp.dhis</groupId>
         <artifactId>dhis-support-jdbc</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -478,7 +484,7 @@
       </dependency>
       <dependency>
         <groupId>org.hisp.dhis</groupId>
-        <artifactId>dhis-support-amqp</artifactId>
+        <artifactId>dhis-support-artemis</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -496,6 +502,11 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jms</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
