updates to latest struts2, and latest jetty plugin

--- a/dhis-2/dhis-web/pom.xml
+++ b/dhis-2/dhis-web/pom.xml
@@ -35,6 +35,7 @@
           <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
+            <version>${maven-jetty-plugin.version}</version>
             <configuration>
               <scanIntervalSeconds>0</scanIntervalSeconds>
             </configuration>
@@ -75,7 +76,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.3.13.v20161014</version>
+        <version>${maven-jetty-plugin.version}</version>
         <configuration>
           <systemProperties>
             <systemProperty>
@@ -135,8 +136,11 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <properties>
     <rootDir>../</rootDir>
     <useWarCompression>true</useWarCompression>
+    <maven-jetty-plugin.version>9.4.21.v20190926</maven-jetty-plugin.version>
   </properties>
+
 </project>
