guava, classmate fixes

--- a/dhis-2/dhis-support/dhis-support-hibernate/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-hibernate/pom.xml
@@ -60,6 +60,10 @@
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml</groupId>
+      <artifactId>classmate</artifactId>
+    </dependency>
 
     <!-- Jasypt -->
 
