update collection3 => collection4

--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -173,6 +173,10 @@
       <artifactId>velocity</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github.eHealthAfrica</groupId>
       <artifactId>dhis2-sms-compression</artifactId>
       <version>0.1.7</version>
