--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -934,6 +934,11 @@
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.bedatadriven</groupId>
+        <artifactId>jackson-datatype-jts</artifactId>
+        <version>2.4</version>
+      </dependency>
+      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate-validator.version}</version>
