--- a/docker/tomcat-alpine/Dockerfile
+++ b/docker/tomcat-alpine/Dockerfile
@@ -7,10 +7,12 @@ LABEL identifier=${IDENTIFIER}
 ENV DHIS2_HOME=/DHIS2_home
 
 COPY ./tomcat-alpine/docker-entrypoint.sh /usr/local/bin/
+COPY ./shared/wait-for-it.sh /usr/local/bin/
 
 RUN rm -rf /usr/local/tomcat/webapps/* && \
     mkdir /usr/local/tomcat/webapps/ROOT && \
     chmod +rx /usr/local/bin/docker-entrypoint.sh && \
+    chmod +rx /usr/local/bin/wait-for-it.sh && \
     mkdir $DHIS2_HOME && \
     addgroup -S tomcat && \
     addgroup root tomcat && \
