--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -28,4 +28,4 @@ services:
     - redis
     ports:
     - "8080"
-    command: wait-for-it.sh db:5432 -- catalina.sh run
+    command: wait-for-it.sh db:5432 -t 0 -- catalina.sh run
